# pixelflut_monoio

./: .gitignore  Cargo.toml
clients/: cccgoe.py
src/: main.rs
src/core/: config.rs  game.rs  image.rs  mod.rs  state.rs
src/frontend/: gstreamer.rs  mod.rs  winit.rs
src/protocol/: mod.rs  tcp_pixelflut.rs
