[package]
name = "pixelflut_monoio"
version = "0.1.0"
edition = "2021"

[dependencies]
monoio = "0.2.4"

winit = "0.29.10"
softbuffer = "0.4.6"

toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
bit-set = "0.8.0"
arrayvec = "0.7.6"
async-channel = "2.3.1"
rand = "0.9.0"
futures = "0.3.31"
gstreamer = "0.23.4"
gstreamer-app = "0.23.4"
gstreamer-video = "0.23.4"
glib = "0.20.7"
